koa, passport, db-migrate, koa-pg-session

--- a/diary/20150804070000-april.md
+++ b/diary/20150804070000-april.md
@@ -1,12 +1,6 @@
-# marginalia
-
-## April Arcus & Nicole Watamaniuk
-
-Boilerplate web app
-
 Current thoughts on our stack:
 
-- PostgreSQL: Schema & NoSQL persistence
+- PostgreSQL: Schema & NoSQL persistance
 - iojs: server-site runtime
 	- koa: coroutines based http server
 		- api.marginalia.com: RESTful API endpoints
@@ -18,16 +12,17 @@ Current thoughts on our stack:
 	- react: declarative view layer
 	- react router: nested routes
 	- radium: inline styling library for React
-	- redux: front-end model layer
+	- redux: front-end data persistance architecture
 	- babel: es6 language features
+	- system.js: module loader (back-end)
 	- webpack: module loader (front-end)
 	- mocha: minimalist test-runner
-	- chai, chai-as-promised, sinon: assertions libraries
+	- chai, chai-as-promised, sinon: useful assertions libraries
 	- flow: static analysis for JavaScript
 
 Setting up your dev environment:
 		`brew install node flow atom`
-		`apm install editorconfig language-babel linter linter-eslint nuclide-flow`
+		`apm install language-babel linter linter-eslint nuclide-flow`
 		`git clone git@github.com:AprilArcus/marginalia.git`
 		`cd marginalia`
 		`npm install`
@@ -39,17 +34,3 @@ Connecting to Pearl (Amazon RDS Postgres server)
 < Password for user marginalia:
 > [Consult 1Password Vault under 'RDS / Pearl']
 ```
-
-Status as of Thu Aug 6 03:27:41 UTC 2015:
-
-- AWS postgres server provisioned
-- Small Koa server with basic support for auth via
-	- koa-pg-session
-  - koa-passport
-  - passport-local
-- POC'ed migrations with node-db-migrate
-  - used migration to create sessions table
-
-- TODO: dev database (local postgres instance?)
-- TODO: deprecate Handlebars (render to JSON only)
-- TODO: wrap all this in tests
