pass co-pg instance to koa-pg-session constructor

--- a/diary/20150806192307-april.md
+++ b/diary/20150806192307-april.md
@@ -6,15 +6,16 @@ Added generic database connection functionality with koa-pg:
 // database connection
 import koaPg from 'koa-pg';
 import { prod } from './database';
-app.use(koaPg(
-	`postgres://${prod.user}:${prod.password}@` +
+app.use(koaPg({
+	name: `db`,
+	conStr: `postgres://${prod.user}:${prod.password}@` +
 	`${prod.host}:${prod.port}/${prod.database}`
-));
+}));
 ```
 
-Obtained `this.pg` from Koa's context before initializing a `koa-generic-session`:
+Obtained co-pg client pool from Koa's context before initializing a `koa-pg-session`.
 
-```
+```JavaScript
 import { prod } from './database';
 import genericSession from 'koa-generic-session';
 import PgStore from 'koa-pg-session';
@@ -26,8 +27,55 @@ var session = genericSession({
 		cleanupTime: 2700000 // ms, === 45 min
 	})
 });
+app.use(session);
+```
+
+becomes
+
+```JavaScript
 app.use(function * (next) {
-	console.log(this.pg);
+	console.log(this.pg.db);
+	var session = genericSession({
+		store: new PgStore(prod, {
+			schema: `public`,
+			table: `sessions`,
+			create: false,
+			cleanupTime: 2700000 // ms, === 45 min
+		})
+	});
+	yield session.call(this, next);
+});
+```
+
+Forked `koa-pg-session` and allowed passing a co-pg instance to the PgSession
+constructor:
+
+```JavaScript
+let client, done;
+if (this.connection.client && this.connection.done) {
+		//Connect using a koa-pg client pool
+		client = this.connection.client;
+		done = this.connection.done;
+} else {
+		//or use the saved connection settings to build our own
+		const connectionResults = yield pg.connectPromise(this.connection);
+		client = connectionResults[0];
+		done = connectionResults[1];
+}
+```
+
+Passed co-pg instance to PgStore constructor:
+
+```JavaScript
+app.use(function * (next) {
+	var session = genericSession({
+		store: new PgStore(this.pg.db, {
+			schema: `public`,
+			table: `sessions`,
+			create: false,
+			cleanupTime: 2700000 // ms, === 45 min
+		})
+	});
 	yield session.call(this, next);
 });
 ```
