--- a/diary/20150806192307-april.md
+++ b/diary/20150806192307-april.md
@@ -47,8 +47,7 @@ app.use(function * (next) {
 });
 ```
 
-Forked `koa-pg-session` and allowed passing a co-pg instance to the PgSession
-constructor:
+Forked `koa-pg-session` and allowed passing a co-pg instance to the PgSession constructor:
 
 ```JavaScript
 let client, done;
